libqt6c/src/libqmenu.hpp

typedef struct QAction QAction;
typedef struct QActionEvent QActionEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QIcon QIcon;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMenu QMenu;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QStyleOptionMenuItem QStyleOptionMenuItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QMenu* QMenu_new(QWidget* parent);
QMenu* QMenu_new2();
QMenu* QMenu_new3(const libqt_string title);
QMenu* QMenu_new4(const libqt_string title, QWidget* parent);
QMetaObject* QMenu_MetaObject(const QMenu* self);
QAction* QMenu_AddMenu(QMenu* self, QMenu* menu);
QMenu* QMenu_AddMenu2(QMenu* self, const libqt_string title);
QMenu* QMenu_AddMenu3(QMenu* self, const QIcon* icon, const libqt_string title);
QAction* QMenu_AddSeparator(QMenu* self);
QAction* QMenu_AddSection(QMenu* self, const libqt_string text);
QAction* QMenu_AddSection2(QMenu* self, const QIcon* icon, const libqt_string text);
QAction* QMenu_InsertMenu(QMenu* self, QAction* before, QMenu* menu);
QAction* QMenu_InsertSeparator(QMenu* self, QAction* before);
QAction* QMenu_InsertSection(QMenu* self, QAction* before, const libqt_string text);
QAction* QMenu_InsertSection2(QMenu* self, QAction* before, const QIcon* icon, const libqt_string text);
bool QMenu_IsEmpty(const QMenu* self);
void QMenu_Clear(QMenu* self);
void QMenu_SetTearOffEnabled(QMenu* self, bool tearOffEnabled);
bool QMenu_IsTearOffEnabled(const QMenu* self);
bool QMenu_IsTearOffMenuVisible(const QMenu* self);
void QMenu_ShowTearOffMenu(QMenu* self);
void QMenu_ShowTearOffMenu2(QMenu* self, const QPoint* pos);
void QMenu_HideTearOffMenu(QMenu* self);
void QMenu_SetDefaultAction(QMenu* self, QAction* defaultAction);
QAction* QMenu_DefaultAction(const QMenu* self);
void QMenu_SetActiveAction(QMenu* self, QAction* act);
QAction* QMenu_ActiveAction(const QMenu* self);
void QMenu_Popup(QMenu* self, const QPoint* pos);
QAction* QMenu_Exec(QMenu* self);
QAction* QMenu_Exec2(QMenu* self, const QPoint* pos);
QAction* QMenu_Exec3(const libqt_list /* of QAction* */ actions, const QPoint* pos);
QSize* QMenu_SizeHint(const QMenu* self);
QRect* QMenu_ActionGeometry(const QMenu* self, QAction* param1);
QAction* QMenu_ActionAt(const QMenu* self, const QPoint* param1);
QAction* QMenu_MenuAction(const QMenu* self);
QMenu* QMenu_MenuInAction(const QAction* action);
libqt_string QMenu_Title(const QMenu* self);
void QMenu_SetTitle(QMenu* self, const libqt_string title);
QIcon* QMenu_Icon(const QMenu* self);
void QMenu_SetIcon(QMenu* self, const QIcon* icon);
void QMenu_SetNoReplayFor(QMenu* self, QWidget* widget);
bool QMenu_SeparatorsCollapsible(const QMenu* self);
void QMenu_SetSeparatorsCollapsible(QMenu* self, bool collapse);
bool QMenu_ToolTipsVisible(const QMenu* self);
void QMenu_SetToolTipsVisible(QMenu* self, bool visible);
void QMenu_AboutToShow(QMenu* self);
void QMenu_AboutToHide(QMenu* self);
void QMenu_Triggered(QMenu* self, QAction* action);
void QMenu_Hovered(QMenu* self, QAction* action);
void QMenu_ChangeEvent(QMenu* self, QEvent* param1);
void QMenu_KeyPressEvent(QMenu* self, QKeyEvent* param1);
void QMenu_MouseReleaseEvent(QMenu* self, QMouseEvent* param1);
void QMenu_MousePressEvent(QMenu* self, QMouseEvent* param1);
void QMenu_MouseMoveEvent(QMenu* self, QMouseEvent* param1);
void QMenu_WheelEvent(QMenu* self, QWheelEvent* param1);
void QMenu_EnterEvent(QMenu* self, QEnterEvent* param1);
void QMenu_LeaveEvent(QMenu* self, QEvent* param1);
void QMenu_HideEvent(QMenu* self, QHideEvent* param1);
void QMenu_PaintEvent(QMenu* self, QPaintEvent* param1);
void QMenu_ActionEvent(QMenu* self, QActionEvent* param1);
void QMenu_TimerEvent(QMenu* self, QTimerEvent* param1);
bool QMenu_Event(QMenu* self, QEvent* param1);
bool QMenu_FocusNextPrevChild(QMenu* self, bool next);
void QMenu_InitStyleOption(const QMenu* self, QStyleOptionMenuItem* option, const QAction* action);
void QMenu_Popup2(QMenu* self, const QPoint* pos, QAction* at);
QAction* QMenu_Exec22(QMenu* self, const QPoint* pos, QAction* at);
QAction* QMenu_Exec32(const libqt_list /* of QAction* */ actions, const QPoint* pos, QAction* at);
QAction* QMenu_Exec4(const libqt_list /* of QAction* */ actions, const QPoint* pos, QAction* at, QWidget* parent);
int QMenu_ColumnCount(const QMenu* self);
void QMenu_Delete(QMenu* self);