QtBeef/src/Qt/qmenu.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QMenu
// --------------------------------------------------------------
[CRepr]
struct QMenu_Ptr: void
{
}
extension CQt
{
	[LinkName("QMenu_new")]
	public static extern QMenu_Ptr* QMenu_new(QWidget_Ptr* parent);
	[LinkName("QMenu_new2")]
	public static extern QMenu_Ptr* QMenu_new2();
	[LinkName("QMenu_new3")]
	public static extern QMenu_Ptr* QMenu_new3(libqt_string* title);
	[LinkName("QMenu_new4")]
	public static extern QMenu_Ptr* QMenu_new4(libqt_string* title, QWidget_Ptr* parent);
	[LinkName("QMenu_Delete")]
	public static extern void QMenu_Delete(QMenu_Ptr* self);
	[LinkName("QMenu_MetaObject")]
	public static extern QMetaObject_Ptr* QMenu_MetaObject(QMenu_Ptr* self);
	[LinkName("QMenu_Qt_Metacast")]
	public static extern void* QMenu_Qt_Metacast(QMenu_Ptr* self, c_char* param1);
	[LinkName("QMenu_Qt_Metacall")]
	public static extern c_int QMenu_Qt_Metacall(QMenu_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QMenu_Tr")]
	public static extern libqt_string QMenu_Tr(c_char* s);
	[LinkName("QMenu_AddMenu")]
	public static extern QAction_Ptr* QMenu_AddMenu(QMenu_Ptr* self, QMenu_Ptr* menu);
	[LinkName("QMenu_AddMenu2")]
	public static extern QMenu_Ptr* QMenu_AddMenu2(QMenu_Ptr* self, libqt_string* title);
	[LinkName("QMenu_AddMenu3")]
	public static extern QMenu_Ptr* QMenu_AddMenu3(QMenu_Ptr* self, QIcon_Ptr* icon, libqt_string* title);
	[LinkName("QMenu_AddSeparator")]
	public static extern QAction_Ptr* QMenu_AddSeparator(QMenu_Ptr* self);
	[LinkName("QMenu_AddSection")]
	public static extern QAction_Ptr* QMenu_AddSection(QMenu_Ptr* self, libqt_string* text);
	[LinkName("QMenu_AddSection2")]
	public static extern QAction_Ptr* QMenu_AddSection2(QMenu_Ptr* self, QIcon_Ptr* icon, libqt_string* text);
	[LinkName("QMenu_InsertMenu")]
	public static extern QAction_Ptr* QMenu_InsertMenu(QMenu_Ptr* self, QAction_Ptr* before, QMenu_Ptr* menu);
	[LinkName("QMenu_InsertSeparator")]
	public static extern QAction_Ptr* QMenu_InsertSeparator(QMenu_Ptr* self, QAction_Ptr* before);
	[LinkName("QMenu_InsertSection")]
	public static extern QAction_Ptr* QMenu_InsertSection(QMenu_Ptr* self, QAction_Ptr* before, libqt_string* text);
	[LinkName("QMenu_InsertSection2")]
	public static extern QAction_Ptr* QMenu_InsertSection2(QMenu_Ptr* self, QAction_Ptr* before, QIcon_Ptr* icon, libqt_string* text);
	[LinkName("QMenu_IsEmpty")]
	public static extern bool QMenu_IsEmpty(QMenu_Ptr* self);
	[LinkName("QMenu_Clear")]
	public static extern void QMenu_Clear(QMenu_Ptr* self);
	[LinkName("QMenu_SetTearOffEnabled")]
	public static extern void QMenu_SetTearOffEnabled(QMenu_Ptr* self, bool tearOffEnabled);
	[LinkName("QMenu_IsTearOffEnabled")]
	public static extern bool QMenu_IsTearOffEnabled(QMenu_Ptr* self);
	[LinkName("QMenu_IsTearOffMenuVisible")]
	public static extern bool QMenu_IsTearOffMenuVisible(QMenu_Ptr* self);
	[LinkName("QMenu_ShowTearOffMenu")]
	public static extern void QMenu_ShowTearOffMenu(QMenu_Ptr* self);
	[LinkName("QMenu_ShowTearOffMenu2")]
	public static extern void QMenu_ShowTearOffMenu2(QMenu_Ptr* self, QPoint_Ptr* pos);
	[LinkName("QMenu_HideTearOffMenu")]
	public static extern void QMenu_HideTearOffMenu(QMenu_Ptr* self);
	[LinkName("QMenu_SetDefaultAction")]
	public static extern void QMenu_SetDefaultAction(QMenu_Ptr* self, QAction_Ptr* defaultAction);
	[LinkName("QMenu_DefaultAction")]
	public static extern QAction_Ptr* QMenu_DefaultAction(QMenu_Ptr* self);
	[LinkName("QMenu_SetActiveAction")]
	public static extern void QMenu_SetActiveAction(QMenu_Ptr* self, QAction_Ptr* act);
	[LinkName("QMenu_ActiveAction")]
	public static extern QAction_Ptr* QMenu_ActiveAction(QMenu_Ptr* self);
	[LinkName("QMenu_Popup")]
	public static extern void QMenu_Popup(QMenu_Ptr* self, QPoint_Ptr* pos);
	[LinkName("QMenu_Exec")]
	public static extern QAction_Ptr* QMenu_Exec(QMenu_Ptr* self);
	[LinkName("QMenu_Exec2")]
	public static extern QAction_Ptr* QMenu_Exec2(QMenu_Ptr* self, QPoint_Ptr* pos);
	[LinkName("QMenu_Exec3")]
	public static extern QAction_Ptr* QMenu_Exec3(void** actions, QPoint_Ptr* pos);
	[LinkName("QMenu_SizeHint")]
	public static extern QSize_Ptr QMenu_SizeHint(QMenu_Ptr* self);
	[LinkName("QMenu_ActionGeometry")]
	public static extern QRect_Ptr QMenu_ActionGeometry(QMenu_Ptr* self, QAction_Ptr* param1);
	[LinkName("QMenu_ActionAt")]
	public static extern QAction_Ptr* QMenu_ActionAt(QMenu_Ptr* self, QPoint_Ptr* param1);
	[LinkName("QMenu_MenuAction")]
	public static extern QAction_Ptr* QMenu_MenuAction(QMenu_Ptr* self);
	[LinkName("QMenu_MenuInAction")]
	public static extern QMenu_Ptr* QMenu_MenuInAction(QAction_Ptr* action);
	[LinkName("QMenu_Title")]
	public static extern libqt_string QMenu_Title(QMenu_Ptr* self);
	[LinkName("QMenu_SetTitle")]
	public static extern void QMenu_SetTitle(QMenu_Ptr* self, libqt_string* title);
	[LinkName("QMenu_Icon")]
	public static extern QIcon_Ptr QMenu_Icon(QMenu_Ptr* self);
	[LinkName("QMenu_SetIcon")]
	public static extern void QMenu_SetIcon(QMenu_Ptr* self, QIcon_Ptr* icon);
	[LinkName("QMenu_SetNoReplayFor")]
	public static extern void QMenu_SetNoReplayFor(QMenu_Ptr* self, QWidget_Ptr* widget);
	[LinkName("QMenu_SeparatorsCollapsible")]
	public static extern bool QMenu_SeparatorsCollapsible(QMenu_Ptr* self);
	[LinkName("QMenu_SetSeparatorsCollapsible")]
	public static extern void QMenu_SetSeparatorsCollapsible(QMenu_Ptr* self, bool collapse);
	[LinkName("QMenu_ToolTipsVisible")]
	public static extern bool QMenu_ToolTipsVisible(QMenu_Ptr* self);
	[LinkName("QMenu_SetToolTipsVisible")]
	public static extern void QMenu_SetToolTipsVisible(QMenu_Ptr* self, bool visible);
	[LinkName("QMenu_AboutToShow")]
	public static extern void QMenu_AboutToShow(QMenu_Ptr* self);
	[LinkName("QMenu_AboutToHide")]
	public static extern void QMenu_AboutToHide(QMenu_Ptr* self);
	[LinkName("QMenu_Triggered")]
	public static extern void QMenu_Triggered(QMenu_Ptr* self, QAction_Ptr* action);
	[LinkName("QMenu_Hovered")]
	public static extern void QMenu_Hovered(QMenu_Ptr* self, QAction_Ptr* action);
	[LinkName("QMenu_ColumnCount")]
	public static extern c_int QMenu_ColumnCount(QMenu_Ptr* self);
	[LinkName("QMenu_ChangeEvent")]
	public static extern void QMenu_ChangeEvent(QMenu_Ptr* self, QEvent_Ptr* param1);
	[LinkName("QMenu_KeyPressEvent")]
	public static extern void QMenu_KeyPressEvent(QMenu_Ptr* self, QKeyEvent_Ptr* param1);
	[LinkName("QMenu_MouseReleaseEvent")]
	public static extern void QMenu_MouseReleaseEvent(QMenu_Ptr* self, QMouseEvent_Ptr* param1);
	[LinkName("QMenu_MousePressEvent")]
	public static extern void QMenu_MousePressEvent(QMenu_Ptr* self, QMouseEvent_Ptr* param1);
	[LinkName("QMenu_MouseMoveEvent")]
	public static extern void QMenu_MouseMoveEvent(QMenu_Ptr* self, QMouseEvent_Ptr* param1);
	[LinkName("QMenu_WheelEvent")]
	public static extern void QMenu_WheelEvent(QMenu_Ptr* self, QWheelEvent_Ptr* param1);
	[LinkName("QMenu_EnterEvent")]
	public static extern void QMenu_EnterEvent(QMenu_Ptr* self, QEnterEvent_Ptr* param1);
	[LinkName("QMenu_LeaveEvent")]
	public static extern void QMenu_LeaveEvent(QMenu_Ptr* self, QEvent_Ptr* param1);
	[LinkName("QMenu_HideEvent")]
	public static extern void QMenu_HideEvent(QMenu_Ptr* self, QHideEvent_Ptr* param1);
	[LinkName("QMenu_PaintEvent")]
	public static extern void QMenu_PaintEvent(QMenu_Ptr* self, QPaintEvent_Ptr* param1);
	[LinkName("QMenu_ActionEvent")]
	public static extern void QMenu_ActionEvent(QMenu_Ptr* self, QActionEvent_Ptr* param1);
	[LinkName("QMenu_TimerEvent")]
	public static extern void QMenu_TimerEvent(QMenu_Ptr* self, QTimerEvent_Ptr* param1);
	[LinkName("QMenu_Event")]
	public static extern bool QMenu_Event(QMenu_Ptr* self, QEvent_Ptr* param1);
	[LinkName("QMenu_FocusNextPrevChild")]
	public static extern bool QMenu_FocusNextPrevChild(QMenu_Ptr* self, bool next);
	[LinkName("QMenu_InitStyleOption")]
	public static extern void QMenu_InitStyleOption(QMenu_Ptr* self, QStyleOptionMenuItem_Ptr* option, QAction_Ptr* action);
	[LinkName("QMenu_Tr2")]
	public static extern libqt_string QMenu_Tr2(c_char* s, c_char* c);
	[LinkName("QMenu_Tr3")]
	public static extern libqt_string QMenu_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QMenu_Popup2")]
	public static extern void QMenu_Popup2(QMenu_Ptr* self, QPoint_Ptr* pos, QAction_Ptr* at);
	[LinkName("QMenu_Exec22")]
	public static extern QAction_Ptr* QMenu_Exec22(QMenu_Ptr* self, QPoint_Ptr* pos, QAction_Ptr* at);
	[LinkName("QMenu_Exec32")]
	public static extern QAction_Ptr* QMenu_Exec32(void** actions, QPoint_Ptr* pos, QAction_Ptr* at);
	[LinkName("QMenu_Exec4")]
	public static extern QAction_Ptr* QMenu_Exec4(void** actions, QPoint_Ptr* pos, QAction_Ptr* at, QWidget_Ptr* parent);
}
